tests/custom/STARIS_2022/operation-type-errors/negate-type-error/stderr.expected
Error:
    negate-type-error.essence:2:17:
  |
2 | such that a = (-false)
  |                 ^^^^^
Type error:
	Expected: int
	Got: bool

cat: *.solution: No such file or directory
